01- Added Other dependencies Configured the MongoDB Embedded version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+logging.level.org.springframework.web=DEBUG
+logging.level.mjzguru.com.springframework = debug 
 
+spring.mongodb.embedded.version=4.4.13
+spring.data.mongodb.port=0
+spring.data.mongodb.host=localhost
