--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ logging.level.mjzguru.com.springframework = debug
 spring.mongodb.embedded.version=4.4.13
 spring.data.mongodb.port=0
 spring.data.mongodb.host=localhost
+spring.data.mongodb.database=users_db
