04- Added Pagination for GET (AllUsers) request also added JavaFaker to generate dummy records in the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.mongodb.embedded.version=4.4.13
 spring.data.mongodb.port=0
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=users_db
+
+#spring.data.web.pageable.size-parameter=size
+#spring.data.web.pageable.page-parameter=page
+#spring.data.web.pageable.default-page-size=10
+#spring.data.web.pageable.one-indexed-parameters=false
+#spring.data.web.pageable.max-page-size=100
+#spring.data.web.pageable.prefix=
+#spring.data.web.pageable.qualifier-delimiter=_
