--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>1.5.2.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
