--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.data.mongodb.port=0
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=users_db
 
+spring.rabbitmq.host = 127.0.0.1
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
+
 #spring.data.web.pageable.size-parameter=size
 #spring.data.web.pageable.page-parameter=page
 #spring.data.web.pageable.default-page-size=10
