06- Added Simple Email sending functionality After creation of each user an email will be sent

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,14 @@ spring.rabbitmq.port = 5672
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<login user to smtp server>
+spring.mail.password=<login password to smtp server>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 #spring.data.web.pageable.size-parameter=size
 #spring.data.web.pageable.page-parameter=page
 #spring.data.web.pageable.default-page-size=10
