--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.7.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
