--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.data.mongodb.port=0
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=users_db
 
+
+api.url=https://reqres.in/api/users
+
 #spring.data.web.pageable.size-parameter=size
 #spring.data.web.pageable.page-parameter=page
 #spring.data.web.pageable.default-page-size=10
